update pop up inner

--- a/style.scss
+++ b/style.scss
@@ -74,7 +74,8 @@ a {
 
     .popup_inner {
         position: absolute;
-        top: 10%;
+         top: 50%;
+        transform: translateY(-50%);
         left: 0;
         right: 0;
         margin-left: auto;
