--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ a:hover {
     left: 20px; }
   .popup .popup_inner {
     position: absolute;
-    top: 10%;
+    top: 50%;
+    transform: translateY(-50%);
     left: 0;
     right: 0;
     margin-left: auto;
